[project]
name = "async-pytest-httpserver"
version = "0.1.0"
description = "Async mock HTTP server for pytest, built on top of aiohttp."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "pytest>=9.0.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
    "wemake-python-styleguide>=1.4.0",
]

[project.entry-points.pytest11]
my_fixtures = "async_pytest_httpserver.fixtures"
